# Artist-s-data

./: README.md  pyproject.toml
app/: access_token.py  artist_data.py  file_maker.py  main.py  parameters.py  seila.py  utils.py
app/archives/: Derek.xlsx  artist.xlsx  model.xlsx  students.xlsx
app/deezer/: artist_data.py
app/routes/: artist.py  deezer.py  download.py  spotify.py
app/spotify/: access_token.py  artist_data.py
spotify/: artist_data.py
