[tool.poetry]
name = "seila"
version = "0.1.0"
description = ""
authors = ["NicholasDRR <nicholasreis00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
pandas = "1.0.5"
numpy = "1.20.3"
openpyxl = "3.0.7"
ytmusicapi = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
